--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Te amo</title>
+    <title>Te amo mi ñiña pechocha</title>
     
     <link rel="stylesheet" href="me_perdonas.css">
     
@@ -18,7 +18,7 @@
 <body>  
         <div>
             <p id="p" hidden>Yo tambien te amo</p>
-        <h1 id="1">Me Perdonas</h1>
+        <h1 id="1">Amorcito me Perdonas</h1>
         <section>
         <button id="Si">Si</button>
         <button id="No">No</button>
