--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Te amo</title>
+    <title>Te quiero</title>
     
     <link rel="stylesheet" href="me_perdonas.css">
     
@@ -17,8 +17,8 @@
 </head>
 <body>  
         <div>
-            <p id="p" hidden>Yo tambien te amo</p>
-        <h1 id="1">Me Perdonas</h1>
+            <p id="p" hidden>tambien eres el amdmv</p>
+        <h1 id="1">me perdonas sophia pls</h1>
         <section>
         <button id="Si">Si</button>
         <button id="No">No</button>
