--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
     </section>
     </div>
    
-    <script src="me_perdonas.js"></script>
+    <script src="quieres_salir_mañana?.js"></script>
 </body>
 </html>
