--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Te amo</title>
+    <title>Te quero Yami</title>
     
     <link rel="stylesheet" href="me_perdonas.css">
     
@@ -17,7 +17,7 @@
 </head>
 <body>  
         <div>
-            <p id="p" hidden>Yo tambien te amo</p>
+            <p id="p" hidden>Yo tambien te quero Yami :3</p>
         <h1 id="1">Me Perdonas</h1>
         <section>
         <button id="Si">Si</button>
